--- a/index.html
+++ b/index.html
@@ -2,51 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./style.css">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Pricing Component</title>
 </head>
 <body>
 
-  Our Pricing
-  Annually
-  Monthly
+  <h1>Our Pricing</h1>
 
-  Basic
-  &dollar;19.99
-  &dollar;199.99
-  500 GB Storage
-  2 Users Allowed
-  Send up to 3 GB
-  Learn More
+  <div class="toggle">
+    <label for="period">Annually</label>
+    <input type="checkbox" name="period">
+    <label for="period">Monthly</label>
+  </div>
 
-  Professional
-  &dollar;24.99
-  &dollar;249.99
-  1 TB Storage
-  5 Users Allowed
-  Send up to 10 GB
-  Learn More
-
-  Master
-  &dollar;39.99
-  &dollar;399.99
-  2 TB Storage
-  10 Users Allowed
-  Send up to 20 GB
-  Learn More
+  <div class="plans">
+    <div class="basic">
+      <h2>Basic</h2>
+      <p class="monthly">&dollar;19.99</p>
+      <p class="annually">&dollar;199.99</p>
+      <p>500 GB Storage</p>
+      <p>2 Users Allowed</p>
+      <p>Send up to 3 GB</p>
+      <button>Learn More</button>    
+    </div>
+    <div class="professional">
+      <h2>Professional</h2>
+      <p class="monthly">&dollar;24.99</p>
+      <p class="annually">&dollar;249.99</p>
+      <p>1 TB Storage</p>
+      <p>5 Users Allowed</p>
+      <p>Send up to 10 GB</p>
+      <button>Learn More</button>    
+    </div>
+    <div class="master">
+      <h2>Master</h2>
+      <p class="monthly">&dollar;39.99</p>
+      <p class="annually">&dollar;399.99</p>
+      <p>2 TB Storage</p>
+      <p>10 Users Allowed</p>
+      <p>Send up to 20 GB</p>
+      <button>Learn More</button>    
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="http://nury.dev">NuryCaroline</a>.
   </div>
 </body>
 </html>
