--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <h1 class="title c-gray">Our Pricing</h1>
 
     <div class="toggle">
-      <label class="c-gray-light" for="period">Annually</label>
-      <label class="toggle-round">
-        <input type="checkbox" />
+      <label class="c-gray-light">Annually</label>
+      <label id="period" class="toggle-round">
+        <input id="input-period" type="checkbox" />
         <span></span>
       </label>
-      <label class="c-gray-light" for="period">Monthly</label>
+      <label class="c-gray-light">Monthly</label>
     </div>
 
     <div class="plans">
@@ -68,5 +68,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="http://nury.dev">NuryCaroline</a>.
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
