Start with month

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="toggle">
       <label class="c-gray-light">Annually</label>
       <label id="period" class="toggle-round">
-        <input id="input-period" type="checkbox" />
+        <input id="input-period" type="checkbox" checked />
         <span></span>
       </label>
       <label class="c-gray-light">Monthly</label>
@@ -35,8 +35,8 @@
     <div class="plans">
       <div class="plan-item basic">
         <h2>Basic</h2>
-        <p class="hidden monthly value">&dollar;<strong>19.99</strong></p>
-        <p class="annually value">&dollar;<strong>199.99</strong></p>
+        <p class="monthly value">&dollar;<strong>19.99</strong></p>
+        <p class="hidden annually value">&dollar;<strong>199.99</strong></p>
         <p>500 GB Storage</p>
         <p>2 Users Allowed</p>
         <p>Send up to 3 GB</p>
@@ -44,8 +44,8 @@
       </div>
       <div class="plan-item professional">
         <h2>Professional</h2>
-        <p class="hidden monthly value">&dollar;<strong>24.99</strong></p>
-        <p class="annually value">&dollar;<strong>249.99</strong></p>
+        <p class="monthly value">&dollar;<strong>24.99</strong></p>
+        <p class="hidden annually value">&dollar;<strong>249.99</strong></p>
         <p>1 TB Storage</p>
         <p>5 Users Allowed</p>
         <p>Send up to 10 GB</p>
@@ -53,8 +53,8 @@
       </div>
       <div class="plan-item master">
         <h2>Master</h2>
-        <p class="hidden monthly value">&dollar;<strong>39.99</strong></p>
-        <p class="annually value">&dollar;<strong>399.99</strong></p>
+        <p class="monthly value">&dollar;<strong>39.99</strong></p>
+        <p class="hidden annually value">&dollar;<strong>399.99</strong></p>
         <p>2 TB Storage</p>
         <p>10 Users Allowed</p>
         <p>Send up to 20 GB</p>
