Adjusted accessibility report

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <title>Frontend Mentor | Pricing Component</title>
   </head>
   <body>
-    <img class="bg-top" src="./images/bg-top.svg" />
-    <img class="bg-bottom"" src="./images/bg-bottom.svg">
+    <img class="bg-top" src="./images/bg-top.svg" alt="Background decoration" />
+    <img class="bg-bottom" src="./images/bg-bottom.svg" alt="Background decoration">
     <h1 class="title c-gray">Our Pricing</h1>
 
     <div class="toggle">
